--- a/source.yml
+++ b/source.yml
@@ -136,6 +136,7 @@ version_control:
     - gui/qglviewer_qt4:
         github: GillesDebunne/libQGLViewer
         tag: v2.6.3
+        patches: $AUTOPROJ_SOURCE_DIR/patches/qglviewer_qt4.patch
 
     - bundles/rock_multiagent:
         github: rock-multiagent/multiagent-bundle-rock_multiagent
